# ti4-analysis

./: .containerignore  .gitignore  ACADEMIC_APPROACH.md  ADJACENCY_LOGIC_VERIFICATION.md  Containerfile  README.md  STATUS.md  add_constrained_optimization.py  add_optimization_cells.py  analyze_objectives_with_economy.py  analyze_optimal_k.py  calculate_sse_all_scenarios.py  calculate_sse_corrected.py  calculate_sse_dynamic.py  calculate_sse_excel_exact.py  calculate_sse_feasibility.py  check_correlations.py  check_neighbor_counts.py  check_neighbors.py  compare_5p_6p_slv.py  compare_base_vs_trade_wars.py  compare_methodologies.py  compare_optimization_methods.py  environment.yml  final_recommendations.py  find_balanced_map.py  generate_game_map.py  generate_game_map_FIXED.py  merge_500k_tail.sh  monitor_500k.sh  pyproject.toml  requirements.txt  run_ts_tuning.slurm  submit_500k_canary.sh  submit_500k_phase67.sh  submit_500k_tail_array.sh  submit_500k_validate.sh  submit_all.sh  submit_basin_validation.sh  submit_gate.sh  (+9 more)
.claude/: settings.local.json
docs/: README.md  Response_to_Reviewers_Template.md  bayesian_optimization_exclusion.md  tabu_search_justification.md
docs/audit/: README.md  analyzer_composite_recompute.md  claim_evidence_audit.md  jfi_audit_TODO.md  n_reconciliation.md  parallel_weight_sources.md  phase6_scale_defects_2026-06.md  rq4_evals_to_best_close_2026-06.md  safety_bounds.md
docs/audit/jfi_only_diagnostics/: PREREGISTRATION.md  jfi_only_final_budget.csv
docs/limitations/: anomalies.md  drf-terminology-framing.md  held_out_validation_variance.md  limitations.md  lsap-proxy-goodhart.md  row-standardization-edge-effects.md
docs/lit_review/: TI4 Analysis - Consensus Lit Reviews.md  TI4 Analysis - Consensus Meter (Additional Questions).md  TI4 Analysis - Initial Consensus Search.md  notebooklm.md
docs/methodology/: Design_Rationale.md  Methodology_Section.md
experiments/: run_final_experiment.py  run_spatial_blindness_experiment.py
notebooks/: 01_balance_analysis_example.ipynb  02_results_visualization.qmd
notebooks/_freeze/02_results_visualization/execute-results/: typ.json
output/saturation_20260314_205919/benchmark_20260315_074617/stats_budget1000/: ablation_multi_jain.csv  bootstrap_cis.csv  convergence_analysis.csv  full_report.txt  pairwise_tests.csv  sensitivity_analysis.csv  sensitivity_rank_stability.txt  summary_table.csv  summary_table.tex
output/verify_pixi_apptainer_20260506_205045/: variance_equalization_20260506_210008.csv  variance_equalization_20260506_224438.csv
scripts/: ablation_lsap_outcome.py  analyze_benchmark.py  analyze_phase1_conditions.py  analyze_rq2_unified_hv.py  analyze_rq3_spearman.py  backfill_canonical_provenance.py  basin_diagnostic.py  benchmark_engine.py  build_sif.slurm  capture_float64_witness.py  check_preflight.py  convergence_diagnostics.py  cross_method_igd.py  distance_weight_sensitivity.py  find_balanced_map.py  find_jfi_matched_pair.py  generate_manuscript_values.py  lisa_proxy_per_map_diagnostic.py  lsap_threshold_sensitivity.py  optimize_hyperparameters.py  plot_statistical_results.py  plot_ts_tuning_diagnostics.py  pre_submission_check.sh  quality_indicators.py  renumber_methodology_sections.py  rq4_build_merged_results.py  rq4_verify_cross_container.py  run_tasks_2_3.slurm  unified_hv_analysis.py  validate_lisa_proxy.py  variance_equalization_diagnostic.py  verify_pixi_apptainer.slurm  viz_pathological_fairness.py
src/ti4_analysis/algorithms/: balance_engine.py  budget_factorization.py  fast_map_state.py  hc_optimizer.py  hex_grid.py  map_generator.py  map_topology.py  moo_indicators.py  nsga2_optimizer.py  sga_optimizer.py  spatial_optimizer.py  tabu_search_optimizer.py
src/ti4_analysis/data/: map_structures.py  tile_loader.py
src/ti4_analysis/evaluation/: __init__.py  analysis.py  batch_experiment.py  report_generator.py
src/ti4_analysis/spatial_stats/: spatial_metrics.py
src/ti4_analysis/utils/: canonical_provenance.py  run_config.py
src/ti4_analysis/visualization/: experiment_viz.py  map_viz.py
tests/: _pre_float64_witness.json  manuscript_values.yaml  test_balance_engine.py  test_hc_optimizer.py  test_hex_grid.py  test_manuscript_values.py  test_map_topology.py  test_methodology_cross_refs.py  test_metric_parity.py  test_moo_indicators.py  test_morans_i_null_invariants.py  test_nsga2_optimizer.py  test_phase6_canonical_values.py  test_pipeline.py  test_sga_optimizer.py  test_spatial_optimizer.py  test_structural_corrections.py  test_tabu_search.py
