[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ti4-analysis"
version = "0.1.0"
description = "Scientific analysis and visualization tools for TI4 map balancing algorithms"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "TI4 Map Generator Project"}
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "plotly>=5.17",
    "networkx>=3.1",
    "pysal>=23.7",
    "libpysal>=4.9",
    "esda>=2.5",
    "geopandas>=0.14",
    "pandas>=2.0",
    "jupyter>=1.0",
    "ipykernel>=6.25",
    "ipywidgets>=8.1",
    "torch>=2.3",
    "torchrl>=0.5.0",
    "torch-geometric>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "hypothesis>=6.88",
    "black>=23.9",
    "ruff>=0.0.290",
    "mypy>=1.5",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.dependencies]
python = "3.11.*"
numpy = ">=1.24"
scipy = ">=1.11"
pandas = ">=2.0"
matplotlib = ">=3.7"
seaborn = ">=0.12"
plotly = ">=5.17"
networkx = ">=3.1"
geopandas = ">=0.14"
pysal = ">=23.7"
libpysal = ">=4.9"
esda = ">=2.5"
scikit-learn = ">=1.3"
jupyter = ">=1.0"
ipykernel = ">=6.25"
ipywidgets = ">=8.1"

[tool.pixi.pypi-dependencies]
ti4-analysis = { path = ".", editable = true }
pymoo = ">=0.6.1"
torch = ">=2.3"
torchrl = ">=0.5.0"
torch-geometric = ">=2.6"
chompjs = ">=1.2.0"
# optuna promoted from the `tuning` feature to base (May 2026): the canonical
# container's `default` env runs Phase 0 hyperparameter tuning, so optuna
# belongs in every environment, not gated to a feature. The May 6 SIF was
# built against the `default` env without optuna, which made Phase 0 in
# submit_paper1.sh fail in 3 seconds — root cause of job 28171's failure.
optuna = ">=4.0"

[tool.pixi.feature.dev.dependencies]
pytest = ">=7.4"
pytest-cov = ">=4.1"
hypothesis = ">=6.88"
black = ">=23.9"
mypy = ">=1.5"

[tool.pixi.feature.dev.pypi-dependencies]
ruff = ">=0.0.290"

[tool.pixi.feature.tuning.pypi-dependencies]
optuna = "*"

[tool.pixi.feature.container.dependencies]
apptainer = ">=1.4"

[tool.pixi.environments]
default = { features = ["dev"], solve-group = "default" }
tuning = { features = ["dev", "tuning"], solve-group = "default" }
container = { features = ["dev", "container"], solve-group = "default" }

[tool.pixi.tasks]
test = "pytest"
lint = "ruff check src tests"
format = "black src tests"
typecheck = "mypy src"

[tool.pixi.feature.container.tasks]
oci-build = { cmd = "podman build -t ti4-analysis:latest -f Containerfile .", description = "Build the OCI image with podman." }
sif-build = { cmd = "mkdir -p .build-tmp && podman save --format oci-archive -o .build-tmp/ti4-analysis.oci.tar ti4-analysis:latest && APPTAINER_TMPDIR=$PIXI_PROJECT_ROOT/.build-tmp apptainer build --force ti4-analysis.sif oci-archive:.build-tmp/ti4-analysis.oci.tar && rm -rf .build-tmp", depends-on = ["oci-build"], description = "Convert the OCI image to ti4-analysis.sif. Uses .build-tmp/ on the project drive for the OCI tar and apptainer's rootfs extraction so /tmp size or quota limits don't bite (pytorch + CUDA libs are several GB unpacked)." }
release = { depends-on = ["sif-build"], description = "Full archival pipeline: OCI image + .sif ready for GHCR push and Zenodo deposit." }

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=ti4_analysis --cov-report=term-missing"
markers = [
    "minimal_validation: decisive TS-Hybrid vs. SATS-BO checks"
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
